Fixed z-index bug on mobile

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -11,6 +11,7 @@
     -moz-box-shadow: 0 0 8px gray;
     -webkit-box-shadow: 0 0 8px gray;
     box-shadow: 0px 0px 8px gray;
+    z-index: 101;
 }
 .card#text-container {
 
